fix letter spacing

--- a/static/css/_base.scss
+++ b/static/css/_base.scss
@@ -14,7 +14,7 @@ body {
     font-size: $font-body;
     line-height: 1.45em;
     padding: 0;
-    letter-spacing: -0.01em;
+    letter-spacing: 0.01em;
     max-width: 100vw;
 }
 
