--- a/static/css/productdesignstyles.css
+++ b/static/css/productdesignstyles.css
@@ -174,7 +174,7 @@ body {
   font-size: 21px;
   line-height: 1.45em;
   padding: 0;
-  letter-spacing: -0.01em;
+  letter-spacing: 0.01em;
   max-width: 100vw;
 }
 
